...
                android:textColor="@color/itemTextColor"/>
        </com.google.android.material.textfield.TextInputLayout>

    </androidx.constraintlayout.widget.ConstraintLayout>

    <HorizontalScrollView
        android:id="@+id/placesList"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/coordinate"
        android:scrollbars="none"
        android:layout_marginHorizontal="0dp">

        <com.google.android.material.chip.ChipGroup
            android:id="@+id/placesGroup"
            style="@style/Widget.MaterialComponents.Chip.Choice"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            app:singleLine="true"
            app:singleSelection="true" />

...
